[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/LookAtTest.gd" type="Script" id=1]
[ext_resource path="res://data/textures/Prototype/texture_04.png" type="Texture" id=2]
[ext_resource path="res://data/shaders/fire3d.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/root_color = Color( 1, 0.75, 0.3, 1 )
shader_param/tip_color = Color( 1, 0.03, 0.001, 1 )
shader_param/fire_alpha = 1.0
shader_param/fire_speed = 1.0
shader_param/fire_aperture = 0.22

[sub_resource type="SpatialMaterial" id=2]
metallic = 1.0
metallic_specular = 1.0
metallic_texture = ExtResource( 2 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0 )

[node name="CSGBox" type="CSGBox" parent="CSGSphere"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
width = 1.0
height = 1.0
depth = 3.0

[node name="CSGSphere3" type="CSGSphere" parent="CSGSphere/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )

[node name="CSGBox2" type="CSGBox" parent="CSGSphere/CSGBox/CSGSphere3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
width = 1.0
height = 1.0
depth = 3.0

[node name="Gravitydirection" type="Spatial" parent="CSGSphere"]
transform = Transform( -4.37114e-08, 2.18557e-08, -0.5, -0.5, 2.18557e-08, 4.37114e-08, 2.18557e-08, 0.5, 2.18557e-08, 0, 0, 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="CSGSphere/Gravitydirection"]
transform = Transform( 1, 0, 0, 0, 1.22803, 0, 0, 0, 1, 0, 2.32705, 0 )
radius = 0.078

[node name="CSGTorus" type="CSGTorus" parent="CSGSphere/Gravitydirection"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 1.839, 0 )
inner_radius = 0.684
outer_radius = 0.027
sides = 3
ring_sides = 3
smooth_faces = false
material = SubResource( 1 )

[node name="CSGTorus2" type="CSGTorus" parent="CSGSphere/Gravitydirection"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.00718205, 1.835, 0 )
inner_radius = 0.68
outer_radius = 0.027
sides = 3
ring_sides = 3
smooth_faces = false
material = SubResource( 2 )

[node name="Spatial2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0 )

[node name="CSGSphere2" type="CSGSphere" parent="Spatial2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.5, 0 )

[node name="CSGSphere4" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.658519, 0, 0.752564, 0, 1, 0, -0.752564, 0, 0.658519, 14.6146, 3.25104, 8.98062 )
